// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`py#rdb agent-connection generator > should add RDS CA bundle to Dockerfile 1`] = `
"FROM public.ecr.aws/docker/library/python:3.14-slim

WORKDIR /app

COPY . /app

ADD --chmod=0644 https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem /opt/global-bundle.pem

EXPOSE 8080

ENV PYTHONPATH=/app
ENV PATH="/app/bin:\${PATH}"

CMD ["python", "-m", "proj_my_agent.agent.main"]
"
`;

exports[`py#rdb agent-connection generator > should add RDS CA bundle to sourceComponent Dockerfile 1`] = `
"FROM public.ecr.aws/docker/library/python:3.14-slim

WORKDIR /app

COPY . /app

ADD --chmod=0644 https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem /opt/global-bundle.pem

EXPOSE 8080

ENV PYTHONPATH=/app
ENV PATH="/app/bin:\${PATH}"

CMD ["python", "-m", "proj_my_agent.custom_agent.main"]
"
`;

exports[`py#rdb agent-connection generator > should add rdb dev dependency to agent dev 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-agent",
  "root": "packages/my-agent",
  "sourceRoot": "packages/my-agent/src/proj_my_agent",
  "targets": {
    "agent-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;

exports[`py#rdb agent-connection generator > should be idempotent for Dockerfile 1`] = `
"FROM public.ecr.aws/docker/library/python:3.14-slim

WORKDIR /app

COPY . /app

ADD --chmod=0644 https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem /opt/global-bundle.pem

EXPOSE 8080

ENV PYTHONPATH=/app
ENV PATH="/app/bin:\${PATH}"

CMD ["python", "-m", "proj_my_agent.agent.main"]
"
`;

exports[`py#rdb agent-connection generator > should use sourceComponent name when provided 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "name": "my-agent",
  "root": "packages/my-agent",
  "sourceRoot": "packages/my-agent/src/proj_my_agent",
  "targets": {
    "custom-agent-dev": {
      "continuous": true,
      "dependsOn": [
        {
          "projects": [
            "db",
          ],
          "target": "dev",
        },
      ],
      "executor": "nx:run-commands",
    },
  },
}
`;
